Change structure of question dependency
This changes the way dependencies between questions are described in the YAML,
to be more generic than just 'lot'.

This is with the aim of having a method on [content loader](https://github.com/alphagov/digitalmarketplace-utils/blob/master/dmutils/content_loader.py)
which would exclude irrelevant questions when provided with a service.

--- a/g6/cloudDeploymentModel.yml
+++ b/g6/cloudDeploymentModel.yml
@@ -1,7 +1,13 @@
 requirements: 'Service providers must state whether the service is a public, private or community cloud service.'
 filters: 'Service providers must state whether the service is a public, private or community cloud service.'
 hint: 'Is the service a public, private, community or hybrid cloud service?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 3answers-type1
 type: radios
 options:
