--- a/g6/datacentreProtectionDisclosure.yml
+++ b/g6/datacentreProtectionDisclosure.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should be confident that the physical security measures employed by the provider are sufficient for their intended use of the service.'
 filters: 'Consumers should be confident that the physical security measures employed by the provider are sufficient for their intended use of the service.'
 hint: 'Do you tell your consumers what physical security your datacentres have?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 3answers-type1
 type: boolean
 filterLabel: 'Datacentre protection'
