--- a/g6/datacentresSpecifyLocation.yml
+++ b/g6/datacentresSpecifyLocation.yml
@@ -1,4 +1,10 @@
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 servicePageLabel: 'User-defined data location'
 assuranceApproach: null
 type: boolean
