--- a/g6/eventMonitoring.yml
+++ b/g6/eventMonitoring.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should have confidence that events generated in service components required to support effective identification of suspicious activity are collected and fed into an analysis system.'
 filters: 'Consumers should have confidence that events generated in service components required to support effective identification of suspicious activity are collected and fed into an analysis system.'
 hint: 'Do you conduct event monitoring and analysis to identify suspicious activity?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Event monitoring'
