--- a/g6/governanceFramework.yml
+++ b/g6/governanceFramework.yml
@@ -1,7 +1,13 @@
 requirements: 'The consumer should have sufficient confidence that the governance framework and processes in place for the service are appropriate for their intended use of it.'
 filters: 'The consumer should have sufficient confidence that the governance framework and processes in place for the service are appropriate for their intended use of it.'
 hint: 'Do you have a governance framework and process in place for the service, eg ISO27001:2013?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Governance framework'
