--- a/g6/hardwareSoftwareVerification.yml
+++ b/g6/hardwareSoftwareVerification.yml
@@ -1,7 +1,12 @@
 requirements: 'The consumer understands and accepts how the service provider verifies that hardware and software used in the service is genuine and has not been tampered with.'
 filters: 'The consumer understands and accepts how the service provider verifies that hardware and software used in the service is genuine and has not been tampered with.'
 hint: 'Do you verify that the hardware and software used in the service are genuine and have not been obviously tampered with?'
-dependsOnLots: 'PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Hardware and software verification'
