--- a/g6/identityAuthenticationControls.yml
+++ b/g6/identityAuthenticationControls.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should have sufficient confidence that identity and authentication controls ensure users are authorised to access specific interfaces.'
 filters: 'Consumers should have sufficient confidence that identity and authentication controls ensure users are authorised to access specific interfaces.'
 hint: 'How do your identity and authentication controls ensure that users are authorised to access specific interfaces? Choose all that apply.'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 3answers-type3
 type: checkboxes
 options:
