--- a/g6/identityStandards.yml
+++ b/g6/identityStandards.yml
@@ -1,4 +1,7 @@
-dependsOnLots: SaaS
+depends:
+  -
+    on: lot
+    being: SaaS
 hint: 'Examples of identity standards include OAuth and SAML. (Optional.)'
 listItemName: 'identity standards example'
 type: list
