--- a/g6/incidentManagementReporting.yml
+++ b/g6/incidentManagementReporting.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should have confidence that pre-defined processes are in place for responding to common types of incident and attack.'
 filters: 'Consumers should have confidence that pre-defined processes are in place for responding to common types of incident and attack.'
 hint: 'Do you have a defined process for reporting security incidents experienced by consumers and external entities?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Consumer reporting of security incidents'
