--- a/g6/secureConfigurationManagement.yml
+++ b/g6/secureConfigurationManagement.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should be sufficiently confident that configuration management processes are in place to ensure the integrity of the solution through development, testing and deployment.'
 filters: 'Consumers should be sufficiently confident that configuration management processes are in place to ensure the integrity of the solution through development, testing and deployment.'
 hint: 'Do you have configuration management in place to ensure the integrity of the service through development, testing and deployment?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Software configuration management'
