--- a/g6/secureDesign.yml
+++ b/g6/secureDesign.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should be sufficiently confident that development is carried out in line with industry good practice regarding secure design, coding, testing and deployment.'
 filters: 'Consumers should be sufficiently confident that development is carried out in line with industry good practice regarding secure design, coding, testing and deployment.'
 hint: 'Is development carried out in line with industry good practice regarding secure design, coding, testing and deployment?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Secure design, coding, testing and deployment'
