--- a/g6/serviceBenefits.yml
+++ b/g6/serviceBenefits.yml
@@ -1,6 +1,13 @@
 hint: 'Include benefits that show how your service helps users improve their business. Use active phrases, eg publish content from multiple devices, quickly manage content on the move.  (Maximum 10 words per benefit. Maximum 10 benefits.)'
 mockAnswer: 'Publish content, Quickly manage content on the move'
-dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
+      - SCS
 listItemName: 'service benefit'
 type: list
 addthing: 'Add another business benefit'
