--- a/g6/serviceTypesIaaS.yml
+++ b/g6/serviceTypesIaaS.yml
@@ -1,4 +1,7 @@
-dependsOnLots: IaaS
+depends:
+  -
+    on: lot
+    being: IaaS
 hint: 'You can choose multiple categories.'
 mockAnswer: Compute
 type: checkboxes
