--- a/g6/serviceTypesSCS.yml
+++ b/g6/serviceTypesSCS.yml
@@ -1,4 +1,7 @@
-dependsOnLots: SCS
+depends:
+  -
+    on: lot
+    being: SCS
 hint: 'You can choose multiple categories'
 mockAnswer: 'Content management system'
 type: checkboxes
