--- a/g6/serviceTypesSaaS.yml
+++ b/g6/serviceTypesSaaS.yml
@@ -1,4 +1,7 @@
-dependsOnLots: SaaS
+depends:
+  -
+    on: lot
+    being: SaaS
 hint: 'You can choose multiple categories'
 mockAnswer: Content management system
 type: checkboxes
