--- a/g6/sfiaRateDocumentURL.yml
+++ b/g6/sfiaRateDocumentURL.yml
@@ -1,5 +1,12 @@
 question: 'Skills Framework for the Information Age (SFIA) rate card'
-dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
+      - SCS
 mockAnswer: 'Rate Card Umbraco 102014.odf'
 hint: 'Please upload your SFIA rate card if you have one. This document will not be indexed by search on the Digital Marketplace. Use an Open Document Format (ODF) or PDF/A (eg .pdf, .odt). (Maximum file size 5MB.)'
 type: upload
