--- a/g6/supportForThirdParties.yml
+++ b/g6/supportForThirdParties.yml
@@ -1,4 +1,11 @@
-dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
+      - SCS
 type: boolean
 filterLabel: 'Support accessible to any third-party suppliers'
 validations:
