--- a/g6/thirdPartySecurityRequirements.yml
+++ b/g6/thirdPartySecurityRequirements.yml
@@ -1,7 +1,13 @@
 requirements: 'The consumer understands and accepts how the service provider’s procurement processes place security requirements on third party suppliers and delivery partners.'
 filters: 'The consumer understands and accepts how the service provider’s procurement processes place security requirements on third party suppliers and delivery partners.'
 hint: 'Do you ensure that relevant security requirements, such as the Cloud Security Principles, are placed on third-party suppliers and delivery partners?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Third-party supplier security requirements'
