--- a/g6/trainingProvided.yml
+++ b/g6/trainingProvided.yml
@@ -1,7 +1,13 @@
 requirements: 'The consumer can educate those administrating and using the service in how to use it safely and securely.'
 filters: 'The consumer can educate those administrating and using the service in how to use it safely and securely.'
 hint: 'Do you provide user or administrator training on the use of the service and its security?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: Training
