--- a/g6/apiType.yml
+++ b/g6/apiType.yml
@@ -1,4 +1,10 @@
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 hint: 'Examples of API include RESTful and SOAP.'
 type: text
 validations:
