--- a/g6/auditInformationProvided.yml
+++ b/g6/auditInformationProvided.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers are aware of the audit information that will be provided to them, how and when it will be made available to them, the format of the data, and the retention period associated with it.'
 filters: 'Consumers are aware of the audit information that will be provided to them, how and when it will be made available to them, the format of the data, and the retention period associated with it.'
 hint: 'Do you provide audit information to consumers? Choose 1.'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: radios
 options:
