--- a/g6/configurationTracking.yml
+++ b/g6/configurationTracking.yml
@@ -1,7 +1,12 @@
 requirements: 'Consumers should have confidence that the status, location and configuration of service components (including hardware and software components) are tracked throughout their lifetime within the service.'
 filters: 'Consumers should have confidence that the status, location and configuration of service components (including hardware and software components) are tracked throughout their lifetime within the service.'
 hint: 'Do you track the status, location and configuration of service components throughout their lifetime?'
-dependsOnLots: 'PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Configuration and change management tracking'
