--- a/g6/dataBackupRecovery.yml
+++ b/g6/dataBackupRecovery.yml
@@ -1,4 +1,10 @@
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 servicePageLabel: 'Backup, disaster recovery and resilience plan in place'
 assuranceApproach: null
 hint: 'You can provide more detail on your disaster recovery plan in your service definition document.'
