--- a/g6/dataRedundantEquipmentAccountsRevoked.yml
+++ b/g6/dataRedundantEquipmentAccountsRevoked.yml
@@ -1,7 +1,12 @@
 requirements: 'Consumers should be sufficiently confident that accounts or credentials specific to redundant equipment are revoked to reduce their value to an attacker.'
 filters: 'Consumers should be sufficiently confident that accounts or credentials specific to redundant equipment are revoked to reduce their value to an attacker.'
 hint: 'Are accounts or credentials specific to redundant equipment revoked to reduce their value to an attacker?'
-dependsOnLots: 'PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - PaaS
+      - IaaS
 assuranceApproach: 3answers-type1
 type: boolean
 filterLabel: 'Redundant equipment accounts revoked'
