--- a/g6/dataSecureEquipmentDisposal.yml
+++ b/g6/dataSecureEquipmentDisposal.yml
@@ -1,7 +1,12 @@
 requirements: 'Consumers should be sufficiently confident that all equipment potentially containing consumer data, credentials, or configuration information for the service is identified at the end of its life (or prior to being recycled).'
 filters: 'Consumers should be sufficiently confident that all equipment potentially containing consumer data, credentials, or configuration information for the service is identified at the end of its life (or prior to being recycled).'
 hint: 'Is all equipment potentially containing consumer data, credentials or configuration information identified at the end of its life or prior to being recycled? Choose 1.'
-dependsOnLots: 'PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - PaaS
+      - IaaS
 assuranceApproach: 4answers-type2
 type: boolean
 filterLabel: 'Secure equipment disposal'
