--- a/g6/datacentreLocations.yml
+++ b/g6/datacentreLocations.yml
@@ -1,7 +1,13 @@
 requirements: 'The geographic location(s) where consumer data is stored, processed or managed from (to country level)'
 filters: 'The geographic location(s) where consumer data is stored, processed or managed from (to country level)'
 hint: 'Where are the service provider''s datacentres located? Choose all that apply.'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 3answers-type1
 type: checkboxes
 options:
