--- a/g6/deprovisioningTime.yml
+++ b/g6/deprovisioningTime.yml
@@ -1,4 +1,10 @@
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 hint: ""
 type: text
 validations:
