--- a/g6/educationPricing.yml
+++ b/g6/educationPricing.yml
@@ -1,4 +1,11 @@
-dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
+      - SCS
 hint: 'Do you offer special pricing for educational organisations?'
 type: boolean
 filterLabel: 'Education pricing'
