--- a/g6/guaranteedResources.yml
+++ b/g6/guaranteedResources.yml
@@ -1,4 +1,10 @@
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 type: boolean
 filterLabel: 'Guaranteed resources defined'
 validations:
