--- a/g6/incidentManagementProcess.yml
+++ b/g6/incidentManagementProcess.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should have confidence that incident management processes are in place for the service and are enacted in response to security incidents.'
 filters: 'Consumers should have confidence that incident management processes are in place for the service and are enacted in response to security incidents.'
 hint: 'Do you have incident management processes in place and are they enacted in response to security incidents?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Incident management processes'
