--- a/g6/legalJurisdiction.yml
+++ b/g6/legalJurisdiction.yml
@@ -1,7 +1,13 @@
 requirements: 'The legal jurisdiction(s) in which the service provider operates'
 filters: 'The legal jurisdiction(s) in which the service provider operates'
 hint: 'Choose 1'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 3answers-type1
 type: radios
 options:
