--- a/g6/managementInterfaceProtection.yml
+++ b/g6/managementInterfaceProtection.yml
@@ -1,7 +1,12 @@
 requirements: 'The consumer understands how management interfaces are protected (see Principle 11) and what functionality is available via those interfaces.'
 filters: 'The consumer understands how management interfaces are protected (see Principle 11) and what functionality is available via those interfaces.'
 hint: 'Do you tell consumers what functionality and protection is available for management interfaces?'
-dependsOnLots: 'PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type2
 type: boolean
 filterLabel: 'Management interface protection'
