--- a/g6/openStandardsSupported.yml
+++ b/g6/openStandardsSupported.yml
@@ -1,4 +1,10 @@
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 hint: 'Take a look at the GOV.UK Open Standards principles for more information on open standards.'
 type: boolean
 filterLabel: 'Open standards supported and documented'
