--- a/g6/personnelSecurityChecks.yml
+++ b/g6/personnelSecurityChecks.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should be content with the level of security screening conducted on service provider staff with access to their information or with ability to affect their service.'
 filters: 'Consumers should be content with the level of security screening conducted on service provider staff with access to their information or with ability to affect their service.'
 hint: 'What kind of personnel security do you apply to staff who have access to the service? Choose all that apply.'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: checkboxes
 options:
