--- a/g6/provisioningTime.yml
+++ b/g6/provisioningTime.yml
@@ -1,4 +1,10 @@
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 hint: 'How long does it take to get your service up and running? For example 1 to 5 hours, 2 to 3 days.'
 type: text
 validations:
