--- a/g6/secureDevelopment.yml
+++ b/g6/secureDevelopment.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should be sufficiently confident that new and evolving threats are reviewed and the service improved in line with them.'
 filters: 'Consumers should be sufficiently confident that new and evolving threats are reviewed and the service improved in line with them.'
 hint: 'Are new and evolving threats reviewed and your services improved accordingly?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Secure development'
