--- a/g6/serviceAvailabilityPercentage.yml
+++ b/g6/serviceAvailabilityPercentage.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should be sufficiently confident that the availability commitments of the service, including their ability to recover from outages, meets their business needs.'
 filters: 'Consumers should be sufficiently confident that the availability commitments of the service, including their ability to recover from outages, meets their business needs.'
 hint: 'What is the availability of the service? eg 99.99'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 3answers-type1
 type: percentage
 filterLabel: 'Service availability'
