--- a/g6/serviceConfigurationGuidance.yml
+++ b/g6/serviceConfigurationGuidance.yml
@@ -1,7 +1,12 @@
 requirements: 'The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.'
 filters: 'The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.'
 hint: 'Do you provide guidance on service configuration options and the relative impacts on security?'
-dependsOnLots: 'PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - PaaS
+      - IaaS
 assuranceApproach: 3answers-type2
 type: boolean
 filterLabel: 'Service configuration guidance'
