--- a/g6/serviceDefinitionDocumentURL.yml
+++ b/g6/serviceDefinitionDocumentURL.yml
@@ -1,7 +1,14 @@
 question: 'Service definition document'
 hint: 'Please upload your service definition. Refer to the ITT documentation for further guidance on what to include. This document will not be indexed by search on the Digital Marketplace. Use an Open Document Format (ODF) or PDF/A (eg .pdf, .odt). (Maximum file size 5MB.)'
 mockAnswer: 'Umbraco Service_Definition 102014.odf'
-dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
+      - SCS
 type: upload
 validations:
   -
