--- a/g6/serviceFeatures.yml
+++ b/g6/serviceFeatures.yml
@@ -1,6 +1,13 @@
 hint: 'Include the technical features of your product, eg graphical workflow, remote access. (Maximum 10 words per feature. Maximum 10 features.)'
 mockAnswer: 'Graphical workflow, Remote access, Revision control'
-dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
+      - SCS
 listItemName: 'service feature'
 type: list
 addthing: 'Add another feature'
