--- a/g6/servicesManagementSepartion.yml
+++ b/g6/servicesManagementSepartion.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should have confidence that their management of the service is kept separate from other consumers (covered separately as part of Principle 9).'
 filters: 'Consumers should have confidence that their management of the service is kept separate from other consumers (covered separately as part of Principle 9).'
 hint: 'Is your management of a consumer’s service kept separate from other consumers?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 4answers-type3
 type: boolean
 filterLabel: 'Services management separation'
