--- a/g6/servicesSeparation.yml
+++ b/g6/servicesSeparation.yml
@@ -1,7 +1,13 @@
 requirements: 'Consumers should have confidence that the service provides sufficient separation of their data and service from other consumers of the service.'
 filters: 'Consumers should have confidence that the service provides sufficient separation of their data and service from other consumers of the service.'
 hint: 'Do you securely separate consumer data and services from other consumers of the service?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 4answers-type3
 type: boolean
 filterLabel: 'Services separation'
