--- a/g6/supportTypes.yml
+++ b/g6/supportTypes.yml
@@ -1,4 +1,11 @@
-dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
+      - SCS
 hint: 'Choose all that apply.'
 type: checkboxes
 options:
