--- a/g6/terminationCost.yml
+++ b/g6/terminationCost.yml
@@ -1,4 +1,7 @@
-dependsOnLots: 'PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being: 'PaaS, IaaS, SCS'
 type: boolean
 filterLabel: 'Termination cost'
 validations:
