--- a/g6/termsAndConditionsDocumentURL.yml
+++ b/g6/termsAndConditionsDocumentURL.yml
@@ -1,6 +1,13 @@
 question: 'Please upload your terms and conditions document'
 mockAnswer: 'Umbraco Terms_Conditions 102014.odf'
-dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
+      - SCS
 hint: 'Please upload your terms and conditions document. This document will not be indexed by search on the Digital Marketplace. Use an Open Document Format (ODF) or PDF/A (eg .pdf, .odt). (Maximum file size 5MB.)'
 type: upload
 validations:
