--- a/g6/thirdPartyComplianceMonitoring.yml
+++ b/g6/thirdPartyComplianceMonitoring.yml
@@ -1,7 +1,13 @@
 requirements: 'The consumer understands and accepts how the service provider manages the conformance of their suppliers with security requirements.'
 filters: 'The consumer understands and accepts how the service provider manages the conformance of their suppliers with security requirements.'
 hint: 'Do you manage your third-party suppliers'' compliance with relevant security requirements?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Third-party supplier compliance monitoring'
