--- a/g6/thirdPartyDataSharingInformation.yml
+++ b/g6/thirdPartyDataSharingInformation.yml
@@ -1,7 +1,13 @@
 requirements: 'The consumer understands and accepts how their information is shared with, or accessible by, third party suppliers and their supply chains.'
 filters: 'The consumer understands and accepts how their information is shared with, or accessible by, third party suppliers and their supply chains.'
 hint: 'Do you inform consumers how much of their information is shared with, or accessible by, third-party suppliers and their supply chains?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Visibility of data shared with third-party suppliers'
