--- a/g6/thirdPartyRiskAssessment.yml
+++ b/g6/thirdPartyRiskAssessment.yml
@@ -1,7 +1,13 @@
 requirements: 'The consumer understands and accepts how the service provider manages security risks from third party suppliers and delivery partners.'
 filters: 'The consumer understands and accepts how the service provider manages security risks from third party suppliers and delivery partners.'
 hint: 'Do you manage the risks to your service from third-party suppliers and delivery partners?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Third-party supplier risk assessment'
