--- a/g6/userAccessControlManagement.yml
+++ b/g6/userAccessControlManagement.yml
@@ -1,7 +1,13 @@
 requirements: 'The consumer has sufficient confidence that other consumers cannot access, modify or otherwise affect their service management.'
 filters: 'The consumer has sufficient confidence that other consumers cannot access, modify or otherwise affect their service management.'
 hint: 'Can consumers manage only their own service, and not access, modify or otherwise affect the service of other consumers via management tools and interfaces?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type2
 type: boolean
 filterLabel: 'User access control within management interfaces'
