--- a/g6/userAuthenticateManagement.yml
+++ b/g6/userAuthenticateManagement.yml
@@ -1,7 +1,13 @@
 requirements: 'The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to authenticate to and access management interfaces for the service (Principle 10 should be used assess the risks of different approaches to meet this objective).'
 filters: 'The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to authenticate to and access management interfaces for the service (Principle 10 should be used assess the risks of different approaches to meet this objective).'
 hint: 'Can only authorised individuals from the consumer organisation access management interfaces for the service?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type2
 type: boolean
 filterLabel: 'User authentication and access management'
