--- a/g6/userAuthenticateSupport.yml
+++ b/g6/userAuthenticateSupport.yml
@@ -1,7 +1,13 @@
 requirements: 'The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to perform actions affecting the consumer’s service through support channels.'
 filters: 'The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to perform actions affecting the consumer’s service through support channels.'
 hint: 'Can only authorised individuals from the consumer organisation perform actions affecting the consumer’s service through your support channels?'
-dependsOnLots: 'SaaS, PaaS, IaaS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
 assuranceApproach: 2answers-type2
 type: boolean
 filterLabel: 'User access control through support channels'
