--- a/g6/vendorCertifications.yml
+++ b/g6/vendorCertifications.yml
@@ -1,4 +1,11 @@
-dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
+depends:
+  -
+    on: lot
+    being:
+      - SaaS
+      - PaaS
+      - IaaS
+      - SCS
 hint: 'Examples of certifications include VMware Certified Professional and Oracle Gold Partner. (Optional.)'
 listItemName: 'certification example'
 type: list
